2005-03-02	Benedikt Meurer <benny@xfce.org>

	* configure.ac, NEWS: Version 0.3.0pre1.
	* HACKING: Fix a typo in the 'Release process' section. Remove the
	  obsolete step 'make regenerate' from the release process.
	* po/de.po, po/libexo-0.3.pot, po/en_GB.po: Run 'make update-po'.
	* Makefile.am: Add the "dist-bz2" and "distcheck-bz2" targets.
	* exo/exo-md5.c(MD5Final): Remove unused variables i and bytes.

2005-02-25	Benedikt Meurer <benny@xfce.org>

	* docs/reference/tmpl/exo-toolbars-editor-dialog.sgml,
	  docs/reference/tmpl/exo-toolbars-editor.sgml, exo/exo-icon-view.c,
	  exo/exo-toolbars-editor-dialog.c, exo/exo-toolbars-editor.c,
	  exo/exo-toolbars-model.c, NEWS: Update the API reference manual.

2005-02-24	Benedikt Meurer <benny@xfce.org>

	* python/exo.override, python/exo.defs: Add Python bindings for
	  the editable toolbars framework.
	* python/examples/Makefile.am, python/examples/toolbars.ui,
	  python/examples/toolbars.py: Add example how to use the editable
	  toolbars framework.

2005-02-21	Benedikt Meurer <benny@xfce.org>

	* python/exomodule.c: Add pygtk_tree_path_to_pyobject() and
	  pygtk_tree_path_from_pyobject() from the pygtk distribution, as
	  the pygtk module unfortunately doesn't export them.
	* python/exo.override, python/exo.defs: Add the ExoIconView class
	  to the Python bindings.

2005-02-19	Benedikt Meurer <benny@xfce.org>

	* acinclude.m4, configure.ac: Remove custom Python headers check
	  and use the new check from xfce4-dev-tools instead.

2005-02-18	Benedikt Meurer <benny@xfce.org>

	* po/libexo-0.3.pot, po/de.po, po/en_GB.po: Update the translation
	  files with the recent changes to the source files.
	* po/ChangeLog: Add an empty file here, as its required by the
	  po/Makefile.in.in file generated by gettextize.
	* configure.ac: Add the Makefile for the Python examples. Add
	  a Makefile variable LIBEXO_VERSION_API, that contains the
	  API version of libexo.