@@ -1,3 +1,13 @@
+2005-03-09	Benedikt Meurer <benny@xfce.org>
+
+	* exo.spec.in: Update the spec file.
+
+2005-03-02	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-0.3.pc.in: Fix API version.
+	* exo/Makefile.am: Fix exo-enum-types.h handling.
+	* po/: Update translations.
+
 2005-03-02	Benedikt Meurer <benny@xfce.org>
 
 	* configure.ac, NEWS: Version 0.3.0pre1.
